# Rift

./: Cargo.toml  readme.md
src/: args.rs  eww.rs  main.rs  monitor.rs  socket.rs
templates/: template.scss  template.yuck
