[package]
name = "rift"
authors = ["SDB-Industries"]
version = "1.0.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.78"
clap = { version = "4.4.12", features = ["derive"] }
tokio = { version = "1.35.1", features = ["full"] }
